dev/ubby/ubby-back/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubby-back
  namespace: ubby
  labels:
    app: ubby-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubby-back
  template:
    metadata:
      labels:
        app: ubby-back
        app.kubernetes.io/part-of: soludev-workload
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/part-of: soludev-workload
      containers:
        - name: ubby-back
          image: kaiohz/pickpro:ubby-back-b74041e0543a92ec9cc6bb54f4e6b6b40f4f108a
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8000
            initialDelaySeconds: 90
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 5
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: ubby-docker-secret
