dev/ubby/ubby-back/details-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubby-back-mcp-details-ingress
  namespace: ubby
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: ubby-back.soludev.tech
      http:
        paths:
          - path: /api/v1/mcp/details
            pathType: Prefix
            backend:
              service:
                name: ubby-back
                port:
                  number: 8000
